--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="navbar">
         <img src="js_logo.svg" alt="">
         <ul class="links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="https://focused-chandrasekhar-fd1fdc.netlify.app/">Digital clock</a></li>
+            <li><a href="https://angry-hodgkin-eb3dce.netlify.app/">TODO List</a></li>
             <li><a href="#">Contact us</a></li>
            
         </ul>
