--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <ul class="links">
             <li><a href="https://focused-chandrasekhar-fd1fdc.netlify.app/">Digital clock</a></li>
             <li><a href="https://angry-hodgkin-eb3dce.netlify.app/">TODO List</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="https://elegant-hawking-69bc75.netlify.app/
+">Weather app</a></li>
            
         </ul>
     </div>
